[package]
name = "tuning"
description = "ansible-like tool with a smaller scope, focused primarily on complementing dotfiles for cross-machine bliss"
keywords = ["ansible", "dotfiles"]
homepage = "https://github.com/jokeyrhyme/tuning"
repository = "https://github.com/jokeyrhyme/tuning"
version = "0.1.5"
authors = ["Ron Waldon <jokeyrhyme@gmail.com>"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "2.0"
lazy_static = "1.4"
mktemp = "0.4"
serde = { version = "1.0", features = ["derive"] }
subprocess = "0.1"
tera = { version = "1.1", default-features = false }
thiserror = "1.0"
toml = "0.5"
