[package]
name = "tuning"
description = "ansible-like tool with a smaller scope, focused primarily on complementing dotfiles for cross-machine bliss"
keywords = ["ansible", "dotfiles"]
homepage = "https://github.com/jokeyrhyme/tuning"
repository = "https://github.com/jokeyrhyme/tuning"
version = "0.1.7"
authors = ["Ron Waldon <jokeyrhyme@gmail.com>"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "1"
dirs = "2"
lazy_static = "1"
mktemp = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
subprocess = "0.1"
tera = { version = "1", default-features = false }
thiserror = "1"
toml = "0.5"
which = "3"
